Bug 76331 - register_allocate.h:67:1: error: unknown type name 'bool' bool ra_select(struct ra_graph *g);
Summary: register_allocate.h:67:1: error: unknown type name 'bool' bool ra_select(stru...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-18 18:57 UTC by Fabio Pedretti
Modified: 2014-03-19 03:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2014-03-18 18:57:07 UTC
After latest changes on mesa git build fails, build log and configure options are at:
https://launchpadlibrarian.net/169948464/buildlog_ubuntu-saucy-amd64.mesa_10.2~git1403181930.f74cf5~gd~s_FAILEDTOBUILD.txt.gz
Comment 1 Brian Paul 2014-03-18 19:28:51 UTC
Should be fixed w/ commit f4435da940327cdb2c3c2bafd6e6e40f6f545639
Comment 2 Kenneth Graunke 2014-03-19 03:44:59 UTC
Crud, sorry about this.  Tom actually let me know a few minutes after I pushed it, and I wrote the patch, got it reviewed...and then forgot to push it.

Thanks for fixing it, Brian.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.